--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <h1>Tech Support</h1>
-    <span class="warning"
-      >WARNING: i am (a FREAKING smart) 8 year old so don't be suprised.
-    </span>
-    <h3>Area under construction. Call +1 (208) 918-1468</h3>
+    <span class="warning">WARNING:Discord ONLY. </span>
+    <h3>Area under construction. go to https://discord.gg/5fZF5QN</h3>
     <script
       type="text/javascript"
       src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
